tests/baselines/reference/parserModuleDeclaration7.errors.txt
parserModuleDeclaration7.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
parserModuleDeclaration7.ts(1,15): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== parserModuleDeclaration7.ts (2 errors) ====
    module number.a {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                  ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }